Makes the height of the jumbotron relative to the viewport; No more white space at the bottom. Resolves #65

--- a/src/static/stylus/home.styl
+++ b/src/static/stylus/home.styl
@@ -1,2 +1,8 @@
 #jumbo_logo
-    margin-left -45px
+  margin-left -45px
+
+html
+  height 100vh
+
+.jumbotron
+  min-height 100vh
